--- a/src/app/components/memoGame/gamePanel.html
+++ b/src/app/components/memoGame/gamePanel.html
@@ -1,22 +1,16 @@
 <div class="container">
 
     <div>
-        <acme-navbar></acme-navbar>
+<acme-navbar></acme-navbar>
     </div>
 
-    <div>
-        <left-panel></left-panel>
-    </div>
+    <div class="row">
+        <div class="col-md-4"><left-panel></left-panel></div>
+        <div class="col-md-8"><memory-game ></memory-game></div>
 
-    <div>
-        <enki-register></enki-register>
     </div>
-
-    <div>
-        <memory-game ></memory-game>
-    </div>
-    <div>
-        <comment-panel></comment-panel>
+    <div class="row">
+        <div> <comment-panel></comment-panel></div>
     </div>
 </div>
 
