--- a/src/app/components/memoGame/memoGame.css
+++ b/src/app/components/memoGame/memoGame.css
@@ -1,6 +1,6 @@
 .user-greeting-text {
   color: black;
-  font-size: 18px;
+  font-size: 16px;
   margin: 5px 5px 5px 5px;
 }
 
@@ -8,6 +8,7 @@
   color: white;
   font-size: 18px;
   margin: 5px 5px 5px 20px;
+  text-align: center;
 }
 
 .leaderboard {
@@ -43,9 +44,8 @@ border-radius: 10px 10px 10px 10px;
 -moz-border-radius: 10px 10px 10px 10px;
 -webkit-border-radius: 10px 10px 10px 10px;
 border: 1px solid #000000;
-background-color: #581845;
-box-sizing: border-box;
-margin: 15px 5px 5px 5px;
+background-color: #9ACD32;
+/* box-sizing: border-box; */
 color: #FFC300;
 }
 
@@ -60,6 +60,11 @@ box-sizing: border-box;
 margin: 15px 5px 5px 5px;
 }
 
+.clicksCounter {
+  text-align: center;
+  padding: 0 10px;
+  color: red;
+}
 .my-jumbotron {
   border-radius: 10px;
   border: solid;
@@ -68,4 +73,27 @@ margin: 15px 5px 5px 5px;
 }
 .italic {
   font-style: italic;
+}
+
+p.user-click-text {
+  height: auto;
+}
+p.gameType {
+  font-size:18px;
+  text-align: center;
+  color: #fff;
+}
+
+#gameContainer {
+  margin-top:30px;
+  float:right;
+}
+
+.btn-warning {
+    margin: 0 auto;
+    display: block;
+}
+.btn-danger{
+    margin: 0 auto;
+    display: block;
 }
