--- a/src/app/components/register/register.html
+++ b/src/app/components/register/register.html
@@ -1,4 +1,8 @@
-<div class="top-content" ng-show="RegisterCtrl.flag.val">
+<div>
+    <acme-navbar></acme-navbar>
+</div>
+
+<div class="top-content" >
 
     <div class="inner-bg">
         <div class="container">
