--- a/src/app/components/userPanel/leftPanel.html
+++ b/src/app/components/userPanel/leftPanel.html
@@ -1,6 +1,4 @@
- <div class="col-md-3">
-
-    <div class = "box-shadow">
+     <div class = "box-shadow">
         <p class = " list-group-item user-greeting-text"> Hello <span class="italic"> {{LeftPanelCtrl.userInfo.userNameFromDataBase}}</span>  </p>
         <p class = " list-group-item user-greeting-text">Your email: <span class="italic">{{LeftPanelCtrl.userInfo.emailFromDataBase}} </span></p>
         <p class = " list-group-item user-greeting-text">Your points: <span class="italic"> {{LeftPanelCtrl.userInfo.pointsFromDataBase}} </span> </p>
@@ -8,6 +6,17 @@
     </div>
     <div class = "leaderbord-shadow">
         <a href="#/leaderboard" class="list-group-item user-greeting-text">Leaderboard</a>
+        <table class="table-style table table-striped my-table-size leaderbord-shadow">
+    <tr class="user-greeting-text">
+        <th>Name</th>
+        <th>Points</th>
+    </tr>
+
+    <tr class="user-greeting-text" ng-repeat="user in LeftPanelCtrl.users | orderBy: '-points'">
+        <td> {{ user.name }}</td>
+        <td> {{user.points}}</td>
+    </tr>
+
+</table>
     </div>
 
-</div>
