--- a/src/app/components/commentPanel/commentPanel.html
+++ b/src/app/components/commentPanel/commentPanel.html
@@ -1,61 +1,58 @@
-<!-- <div class="top-content">
-    <div class="inner-bg">
-        <div class="container"> -->
-            <div class="row">
-            <nav class="navbar navbar-default col-md-12" >
-                <div class="col-md-6">
-                    <div class="form-box">
-                        <div class="form-top">
-                            <div class="form-top-left">
-                                <h3>Give us your comment</h3>
-                            </div>
-                        </div>
-
-                        <div class="form-bottom">
-                            <form name="commentForm" ng-submit="comPanelCtrl.submitCommentForm(commentForm.$valid)" novalidate>
-
-                                <div class="form-group" ng-class="{'has-error': commentForm.name.$invalid && !commentForm.name.$pristine }">
-                                    <label class="sr-only">Name</label>
-                                    <input type="text" name="name" placeholder="Nickname..." class="form-first-name form-control"
-                                    ng-model="comPanelCtrl.name" required>
-                                    <p ng-show="commentForm.name.$invalid && !commentForm.name.$pristine" class="help-block"> Enter your name</p>
-                                </div>
-
-                                <div class="form-group" ng-class="{'has-error': commentForm.email.$invalid && !commentForm.email.$pristine }">
-                                    <label class="sr-only">Email</label>
-                                    <input type="email" name="email" placeholder="Email..." class="form-email form-control"
-                                  ng-model="comPanelCtrl.email" required>
-                                    <p ng-show="commentForm.email.$invalid && !commentForm.email.$pristine" class="help-block"> Enter your email</p>
-                                </div>
-
-                                <textarea  style="width: 555px; height: 150px;" name="comment" ng-model="comPanelCtrl.comment" placeholder="Comment...">
-                                </textarea>
-                                <button type="submit" class="btn"  ng-disabled="commentForm.$invalid" ng-click = "comPanelCtrl.setToPristine(commentForm)">Submit!</button>
-
-                            </form>
-                        </div>
+<div class="row">
+    <nav class="navbar navbar-default col-md-12" >
+        <div class="col-md-6">
+            <div class="form-box">
+                <div class="form-top">
+                    <div class="form-top-left">
+                     <h3>Give us your comment</h3>
                     </div>
             </div>
 
-    <div class="col-md-6">
-    <div class="form-box">
-                        <div class="form-top">
-                            <div class="form-top-left">
-                                <h3>Comments</h3>
-                            </div>
-                        </div>
-        <table class="table-style table table-bordered my-table-size">
+            <div class="form-bottom">
+                <form name="commentForm" ng-submit="comPanelCtrl.submitCommentForm(commentForm.$valid)" novalidate>
+
+                    <div class="form-group" ng-class="{'has-error': commentForm.name.$invalid && !commentForm.name.$pristine }">
+                        <label class="sr-only">Name</label>
+                        <input type="text" name="name" placeholder="Nickname..." class="form-first-name form-control"
+                        ng-model="comPanelCtrl.name" required>
+                        <p ng-show="commentForm.name.$invalid && !commentForm.name.$pristine" class="help-block"> Enter your name</p>
+                    </div>
+
+                    <div class="form-group" ng-class="{'has-error': commentForm.email.$invalid && !commentForm.email.$pristine }">
+                        <label class="sr-only">Email</label>
+                        <input type="email" name="email" placeholder="Email..." class="form-email form-control"
+                      ng-model="comPanelCtrl.email" required>
+                        <p ng-show="commentForm.email.$invalid && !commentForm.email.$pristine" class="help-block"> Enter your email</p>
+                    </div>
+
+                    <textarea  style="width: 555px; height: 150px;" name="comment" ng-model="comPanelCtrl.comment" placeholder="Comment...">
+                    </textarea>
+                    <button type="submit" class="btn"  ng-disabled="commentForm.$invalid" ng-click = "comPanelCtrl.setToPristine(commentForm)">Submit!</button>
+
+                </form>
+            </div>
+        </div>
+</div>
+
+        <div class="col-md-6">
+            <div class="form-box">
+                <div class="form-top">
+                     <div class="form-top-left">
+                            <h3>Comments</h3>
+                    </div>
+                </div>
+            <table class="table-style table table-bordered my-table-size">
             <tr class="user-greeting-text">
                  <th>Name</th>
                  <th>Comment</th>
             </tr>
 
-            <tr class="user-greeting-text" ng-repeat="comment in comPanelCtrl.comments ">
-                 <td> {{ comment.email }}</td>
+            <tr class="user-greeting-text" ng-repeat="comment in comPanelCtrl.comments | limitTo:5 ">
+                <td> {{ comment.email }}</td>
                 <td> {{comment.comment}}</td>
             </tr>
 
-        </table>
+            </table>
                 </div>
 
             </div>
