Last changes before merging

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -3,9 +3,10 @@
     <div>
         <acme-navbar></acme-navbar>
     </div>
-
-    <div ng-show=memoCtrl.toggleGameValue>
-        <memory-game ></memory-game>
+<div>
+    <!-- <div ng-show=memoCtrl.toggleGameValue> -->
+    <div div class="col-md-4"> <welcome-panel><welcome-panel></welcome-panel></div>
+    <div class="col-md-8"><memory-game ></memory-game></div>
     </div>
 </div>
 
