--- a/src/app/components/quiz/quizTemplate.html
+++ b/src/app/components/quiz/quizTemplate.html
@@ -20,7 +20,7 @@
 
     <div ng-show="quizOver">
         <h2>Quiz is over</h2>
-        <button ng-click="reset()">Play again</button>
+<!--         <button ng-click="reset()">Play again</button> -->
     </div>
 
     <div id="score">
