--- a/src/app/components/welcomePanel/welcome.html
+++ b/src/app/components/welcomePanel/welcome.html
@@ -1,4 +1,4 @@
 <div>
-<p> Witaj na naszej stronie. Z menu po prawej stronie wybierz zestaw kart: Zwierzęta lub Owoce i poziom trudności. Celem gry jest dobranie takich samych kart w pracy. Powodzenia!
+<p> Witaj na naszej stronie. Z menu po prawej wybierz zestaw kart: Zwierzęta lub Owoce i poziom trudności. Celem gry jest dobranie takich samych kart w pracy. Powodzenia!
 </p>
 </div>
