--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,7 +5,7 @@
     </div>
 <div>
     <!-- <div ng-show=memoCtrl.toggleGameValue> -->
-    <div div class="col-md-4"> <welcome-panel><welcome-panel></welcome-panel></div>
+    <div div class="col-md-4"> <welcome-panel></welcome-panel></div>
     <div class="col-md-8"><memory-game ></memory-game></div>
     </div>
 </div>
