--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -12,6 +12,7 @@
         </ul>
         <a  href="#/login" type="button" class="btn btn-primary sign-button" id="login-button">Login/Sign up</a>
         <button type="button" id="logout-button" class="btn btn-primary sign-button" ng-show="NavbarCtrl.flagBtn" ng-click="NavbarCtrl.logOut()">Logout</button>
+        <button type="button" id="admin-button" class="btn btn-primary sign-button" ng-show="NavbarCtrl.flagBtn" ng-click="NavbarCtrl.showAdminPanel()">adminPanel</button>
     </div>
   </div>
 </nav>
