--- a/src/app/components/memoGame/gamePanel.html
+++ b/src/app/components/memoGame/gamePanel.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="maupinho" >
 
     <div>
 <acme-navbar></acme-navbar>
@@ -6,7 +6,7 @@
 
     <div class="row">
         <div class="col-md-4"><left-panel></left-panel></div>
-        <div class="col-md-8"><memory-game ></memory-game></div>
+        <div class="col-md-8" id="gameFrame"><memory-game ></memory-game></div>
 
     </div>
     <div class="row">
