--- a/src/app/components/navbar/navbar.css
+++ b/src/app/components/navbar/navbar.css
@@ -14,9 +14,9 @@
     width: 100%
 }
 
-/* .modal-body .form-horizontal .control-label {
+.modal-body .form-horizontal .control-label {
     text-align: left;
-} */
+}
 .modal-body .form-horizontal .col-sm-offset-2 {
     margin-left: 15px;
 }
